Upgrade to Java 25 and apply modern best practices
- Upgraded Java version to 25 in pom.xml.
- Converted StringTuple to a Java record and removed Lombok dependency.
- Refactored code to use 'var' for local variables.
- Updated streams to use .toList() instead of .collect(Collectors.toList()).
- Replaced LinkedList with ArrayList for better performance.
- Updated .gitignore to exclude .gemini directory.